<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_poi"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_fav"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:padding="@dimen/ic_fav_padding"
            android:src="@drawable/ic_fav_24"
            android:layout_gravity="start"
            android:contentDescription="@string/toggle_favourites_content_description" />

        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:padding="@dimen/ic_fav_padding"
            android:src="@drawable/ic_edit_24"
            android:layout_gravity="start"
            android:visibility="gone"
            android:contentDescription="@string/toggle_favourites_content_description" />

        <ImageView
            android:id="@+id/btn_remove"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:padding="@dimen/ic_fav_padding"
            android:src="@drawable/ic_delete_24"
            android:layout_gravity="end"
            android:visibility="gone"
            android:contentDescription="@string/toggle_favourites_content_description" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_image_status"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/image_downloading"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_main_image"
        app:layout_constraintTop_toTopOf="@id/iv_main_image"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/iv_main_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_poi"
        android:contentDescription="@string/image_of_the_poi_content_description" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main_image"
        tools:text="Name" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>