<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddLocationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_location"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_location"
        tools:context=".MapsActivity"
        tools:ignore="FragmentTagUsage" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_location"
        app:layout_constraintBottom_toBottomOf="@id/map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="40dp"
        android:src="@drawable/ic_location_add_24"
        android:contentDescription="@string/location_pin_content_description" />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_add_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/main_content_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_text"
                    android:inputType="textCapWords"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_activity_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_text"
                    android:inputType="textCapSentences"
                    android:textColor="@color/primary_text_color"
                    android:textColorHint="@color/secondary_text_color"
                    android:textSize="@dimen/edit_text_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_add_image"
                android:layout_width="@dimen/add_location_image_size"
                android:layout_height="@dimen/add_location_image_size"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_image_view_border"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_placeholder_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_description" />

            <TextView
                android:id="@+id/tv_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/add_location_image_button"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_add_image"
                app:layout_constraintTop_toBottomOf="@+id/til_description" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/add_location_save_btn_paddingTopBottom"
                android:paddingBottom="@dimen/add_location_save_btn_paddingTopBottom"
                android:text="@string/save_text"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_add_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>